
# Copyright 2025 Open Source Robotics Foundation, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Imports

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

# Libraries

cc_library(
    name = "rmw_implementation",
    srcs = [
        "src/functions.cpp",
        "src/functions.hpp",
        "src/visibility_control.h"
    ],
    defines = [
        "DEFAULT_RMW_IMPLEMENTATION=rmw_fastrtps_cpp",
    ],
    deps = [
        "@ament_index_cpp",
        "@rcpputils",
        "@rcutils",
        "@rmw",
        "@rosidl_runtime_c",
    ],
)

# Tests

cc_test(
    name = "test_functions",
    srcs = [
        "test/test_functions.cpp",
    ],
    deps = [
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "@rcpputils",
        "@rcutils",
        "@rmw",
        "@rosidl_runtime_c",
        ":rmw_implementation",
    ],
)

[
    cc_test(
        name = "benchmark_symbols__" + rmw,
        srcs = [
            "test/benchmark/benchmark_symbols.cpp",
        ],
        deps = [
            "@google_benchmark",
            "@osrf_testing_tools_cpp//:memory_tools",
            "@performance_test_fixture",
            ":rmw_implementation",
        ],
    )
    for rmw in [
        "rmw_fastrtps_cpp",
        "rmw_fastrtps_dynamic_cpp",
        "rmw_zenoh_cpp",
    ]
]
