
# Copyright 2025 Open Source Robotics Foundation, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Imports

load("@ros//:defs.bzl", "ros_interface", "ros_package")

# Interfaces

ros_interface(
    name = "msg__ShortVaried",
    src = "msg/ShortVaried.msg",
    visibility = ["//visibility:public"],
)

ros_interface(
    name = "msg__ShortVariedNested",
    src = "msg/ShortVariedNested.msg",
    visibility = ["//visibility:public"],
    deps = [
        ":msg__ShortVaried",
    ],
)

ros_interface(
    name = "msg__ShortVariedMultiNested",
    src = "msg/ShortVariedMultiNested.msg",
    visibility = ["//visibility:public"],
    deps = [
        ":msg__ShortVariedNested",
    ],
)

ros_interface(
    name = "srv__ShortVariedMultiNested",
    src = "srv/ShortVariedMultiNested.srv",
    visibility = ["//visibility:public"],
    deps = [
        ":msg__ShortVariedNested",
    ],
)

ros_interface(
    name = "action__ShortVariedMultiNested",
    src = "action/ShortVariedMultiNested.action",
    visibility = ["//visibility:public"],
    deps = [
        ":msg__ShortVariedNested",
    ],
)

# Package

ros_package(
    name = "ros2cli_test_interfaces",
    interfaces = [
        ":action__ShortVariedMultiNested",
        ":msg__ShortVaried",
        ":msg__ShortVariedNested",
    ],
)
