
# Copyright 2025 Open Source Robotics Foundation, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Imports

load("@ros//:defs.bzl", "ros_package")

# Package

ros_package(
    name = "rosidl_generator_py",
    deps = [
        "@ament_cmake",
        "@ament_cmake_cppcheck",
        "@ament_cmake_cpplint",
        "@ament_cmake_flake8",
        "@ament_cmake_pep257",
        "@ament_cmake_pytest",
        "@ament_cmake_uncrustify",
        "@ament_index_python",
        "@ament_lint_auto",
        "@ament_lint_common",
        "@rmw",
        "@rosidl_cli",
        "@rosidl_cmake",
        "@rosidl_generator_c",
        "@rosidl_generator_cpp",
        "@rosidl_parser",
        "@rosidl_runtime_c",
        "@rosidl_typesupport_c",
        "@rosidl_typesupport_fastrtps_c",
        "@rosidl_typesupport_introspection_c",
        "@rpyutils",
        "@test_interface_files",
    ],
)
