
# Copyright 2025 Open Source Robotics Foundation, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Package information
        
module(
    name = "rosidl_runtime_c",
    version = "5.0.0",
    compatibility_level = 1,
)

# Dependencies

bazel_dep(name = "googletest", version = "1.17.0")
bazel_dep(name = "rules_cc", version = "0.1.4")
bazel_dep(name = "rcutils", version = "7.0.0")
bazel_dep(name = "rosidl_typesupport_interface", version = "5.0.0")

# bazel_dep(name = "ament_cmake", version = "2.8.4")
# bazel_dep(name = "ament_cmake_gtest", version = "2.8.4")
# bazel_dep(name = "ament_cmake_ros_core", version = "0.15.1")
# bazel_dep(name = "ament_lint_auto", version = "0.20.1")
# bazel_dep(name = "ament_lint_common", version = "0.20.1")
# bazel_dep(name = "performance_test_fixture", version = "0.4.0")
# bazel_dep(name = "rcutils", version = "7.0.0")
# bazel_dep(name = "rosidl_typesupport_interface", version = "5.0.0")