
# Copyright 2025 Open Source Robotics Foundation, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@ros//python:defs.bzl", "py_pytest")
load("@rules_python//python:defs.bzl", "py_library", "py_binary")
load("@rules_python//python/entry_points:py_console_script_binary.bzl", "py_console_script_binary")

package(default_visibility = ["//visibility:public"])

# This is the python library that does the bulk of the work for converting
# the .msg, .srv, .action files to the generic .idl representation.
py_library(
    name = "rosidl_runtime_py",
    srcs = glob(["rosidl_runtime_py/**/*.py"]),
    deps = [
        "@ament_index_python",
        "@rosidl_parser",
        "@ros//python:numpy",
        "@ros//python:pyyaml",
    ],
)

# This makes the setup script executable, and ensures that eny downstream
# consumers of this script bring in the correct dependencies.
py_binary(
    name = "setup",
    srcs = ["setup.py"],
    deps = ["@ros//python:setuptools"],
    visibility = ["//visibility:private"],
)

# All functional tests.
[
    py_pytest(
        name = test,
        srcs = ["test/rosidl_runtime_py/{}.py".format(test)],
        python_version = "PY3",
        deps = [":rosidl_runtime_py"],
    )
    for test in [
        "test_convert",
        "test_get_interfaces",
        "test_import_message",
        "test_set_message",
        "test_set_utilities",
    ]
]
