
# Copyright 2025 Open Source Robotics Foundation, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Package information
        
module(
    name = "rosidl_runtime_rs",
    version = "0.4.2",
    compatibility_level = 1,
)

# Dependencies

bazel_dep(name = "rules_rust", version = "0.63.0")

# bazel_dep(name = "ros", version = "0.0.0")
# bazel_dep(name = "ament_index_python", version = "0.20.1")
# bazel_dep(name = "rosidl_parser", version = "5.0.0")

# bazel_dep(name = "std_msgs", version = "5.8.1")
# bazel_dep(name = "std_srvs", version = "5.8.1")
# bazel_dep(name = "test_msgs", version = "2.4.1")

#bazel_dep(name = "rules_rust", version = "0.63.0")